--- a/_includes/SequenceEdit.html
+++ b/_includes/SequenceEdit.html
@@ -1,6 +1,6 @@
 <template id="sequenceEdit">
   <div class="hflex">
-    <form id="sequenceList" class="hflex flex-grow hscrollable"></form>
+    <form class="hflex flex-grow hscrollable"></form>
     <button type="button" id="seqInsSame">=</button>
     <button type="button" id="seqInsClone">*</button>
     <button type="button" id="seqDel">X</button>
