--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -1,10 +1,10 @@
 <template id="sequenceEdit">
   <div class="hflex">
     <form class="hflex flex-grow hscrollable"></form>
-    <button type="button" id="seqInsSame">=</button>
-    <button type="button" id="seqInsClone">*</button>
-    <button type="button" id="seqDel">X</button>
-    <button type="button" id="seqUp">^</button>
-    <button type="button" id="seqDown">v</button>
+    <button id="seqInsSame">=</button>
+    <button id="seqInsClone">*</button>
+    <button id="seqDel">X</button>
+    <button id="seqUp">^</button>
+    <button id="seqDown">v</button>
   </div>
 </template>
