--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -1,6 +1,6 @@
 <template id="sequenceEdit">
   <div class="hflex">
-    <form class="hflex flex-grow hscrollable"></form>
+    <form class="hflex flex-grow hscrollable" autocomplete="off"></form>
     <button id="seqInsSame">=</button>
     <button id="seqInsClone">*</button>
     <button id="seqDel">X</button>
