Pattern select box

--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -4,7 +4,6 @@
     <button id="seqInsSame">=</button>
     <button id="seqInsClone">*</button>
     <button id="seqDel">X</button>
-    <button id="seqUp">^</button>
-    <button id="seqDown">v</button>
+    <select id="patternSelect"></select>
   </div>
 </template>
