Icons for sequence edit

--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -3,8 +3,14 @@
     <form id="seqList" class="hflex flex-grow hscrollable" autocomplete="off">
       <select id="patternSelect" class="show-checked"></select>
     </form>
-    <button id="seqInsSame">=</button>
-    <button id="seqInsClone">*</button>
-    <button id="seqDel">X</button>
+    <button id="seqInsSame">
+      <img class="icon" src="assets/equal.svg">
+    </button>
+    <button id="seqInsClone">
+      <img class="icon" src="assets/plus.svg">
+    </button>
+    <button id="seqDel">
+      <img class="icon" src="assets/close.svg">
+    </button>
   </div>
 </template>
