--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -1,7 +1,7 @@
 <template id="sequenceEdit">
   <div class="hflex">
     <form id="seqList" class="hflex flex-grow hscrollable" autocomplete="off">
-      <select id="patternSelect" class="show-checked"></select>
+      <select id="patternSelect" class="seq-select show-checked"></select>
     </form>
     <button id="seqInsSame">
       <img class="icon" src="assets/equal.svg">
