--- a/templates/SequenceEdit.html
+++ b/templates/SequenceEdit.html
@@ -4,13 +4,13 @@
       <select id="patternSelect" class="seq-select show-checked"></select>
     </form>
     <button id="seqInsSame">
-      <img class="icon" src="assets/equal.svg">
+      <inline-svg class="icon" src="equal.svg"></inline-svg>
     </button>
     <button id="seqInsClone">
-      <img class="icon" src="assets/plus.svg">
+      <inline-svg class="icon" src="plus.svg"></inline-svg>
     </button>
     <button id="seqDel">
-      <img class="icon" src="assets/close.svg">
+      <inline-svg class="icon" src="close.svg"></inline-svg>
     </button>
   </div>
 </template>
